<resources>
    <string name="app_name">i-Log</string>
    <string name="settings">Settings</string>
    <string name="sensing">Sensing</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="notification_sleep_settings">Notifications</string>
    <string name="notification_settings_title">Sleeping</string>
    <string name="notification_settings_subtitle">Snooze notifications</string>
    <string name="notification_settings_subtitle_for" formatted="false">Snooze notifications for %d hours until %s</string>
    <string name="notification_settings_toast" formatted="false">Notifications will be snoozed until %s</string>
    <string name="notification_settings_toast_reset" formatted="false">Notifications are no longer snoozed</string>
    <string name="notification_settings_dialog">How long will you sleep for?</string>
    <string name="user_settings">User</string>
    <string name="application_settings">Application</string>
    <string name="data_settings">Data</string>
    <string name="sensors_settings">Sensing</string>
    <string name="positioning_settings">Positioning</string>
    <string name="ambience_settings">Ambience</string>
    <string name="social_settings">Social</string>
    <string name="social_bluetooth_settings">Bluetooth</string>
    <string name="social_bluetooth_le_settings">Bluetooth LE</string>
    <string name="logs_value_settings">Manage Logs</string>
    <string name="logs_settings">Logs</string>
    <string name="sync_logs">Sync Logs</string>
    <string name="delete_archive_files">Delete Archive Files</string>
    <string name="sync_logs_summary">Sync Logs with the Server</string>
    <string name="delete_archive_files_summary"></string>
    <string name="dump_archive_files_summary">Click to dump the logs to the sd card, do it only if you are required to!</string>
    <string name="dump_archive_files">Dump Files</string>
    <string name="tasks_settings_title">Tasks</string>
    <string name="message_settings_title">Messages</string>
    <string name="challenges_settings_title">Challenges</string>
    <string name="positioning_gps_settings">GPS</string>
    <string name="positioning_gps_summary_settings">Logging not in progress.</string>
    <string name="positioning_network_settings">Network</string>
    <string name="positioning_network_summary_settings">Logging not in progress.</string>
    <string name="ambience_wifi_settings">WI-FI</string>
    <string name="networks_wifi_settings">WI-FI Networks</string>
    <string name="ambience_wifi_summary_settings">Logging not in progress.</string>
    <string name="networks_wifi_summary_settings">Logging not in progress.</string>
    <string name="sensors_accelerometer_settings">Accelerometer</string>
    <string name="sensors_accelerometer_summary_settings">Logging not in progress.</string>
    <string name="sensors_gravity_settings">Gravity</string>
    <string name="sensors_gravity_summary_settings">Logging not in progress.</string>
    <string name="sensors_gyroscope_settings">Gyroscope</string>
    <string name="sensors_gyroscope_summary_settings">Logging not in progress.</string>
    <string name="sensors_linearacceleration_settings">Linear acceleration</string>
    <string name="sensors_linearacceleration_summary_settings">Logging not in progress.</string>
    <string name="sensors_rotationvector_settings">Rotation vector</string>
    <string name="sensors_rotationvector_summary_settings">Logging not in progress.</string>
    <string name="sensors_magneticfield_settings">Magnetic field</string>
    <string name="sensors_magneticfield_summary_settings">Logging not in progress.</string>
    <string name="sensors_orientation_settings">Orientation</string>
    <string name="sensors_orientation_summary_settings">Logging not in progress.</string>
    <string name="sensors_proximity_settings">Proximity</string>
    <string name="sensors_proximity_summary_settings">Logging not in progress.</string>
    <string name="sensors_temperature_settings">Temperature</string>
    <string name="sensors_temperature_summary_settings">Logging not in progress.</string>
    <string name="sensors_light_settings">Light</string>
    <string name="sensors_light_summary_settings">Logging not in progress.</string>
    <string name="sensors_pressure_settings">Pressure</string>
    <string name="sensors_pressure_summary_settings">Logging not in progress.</string>
    <string name="sensors_humidity_settings">Humidity</string>
    <string name="sensors_humidity_summary_settings">Logging not in progress.</string>
    <string name="audio_settings">Audio</string>
    <string name="audio_summary_settings">Logging not in progress.</string>
    <string name="calls_settings">Calls</string>
    <string name="calls_in_settings">Incoming Calls</string>
    <string name="calls_out_settings">Outgoing Calls</string>
    <string name="sms_settings">Sms</string>
    <string name="sms_in_settings">Incoming Sms</string>
    <string name="sms_out_settings">Outgoing Sms</string>
    <string name="smartphone_usage_settings">Smartphone Usage</string>
    <string name="app_running_settings">Running Application</string>
    <string name="screen_running_settings">Screen Status</string>
    <string name="calls_in_summary_settings">Logging not in progress.</string>
    <string name="calls_out_summary_settings">Logging not in progress.</string>
    <string name="sms_in_summary_settings">Logging not in progress.</string>
    <string name="sms_out_summary_settings">Logging not in progress.</string>
    <string name="app_usage_summary_settings">Logging not in progress.</string>
    <string name="screen_usage_summary_settings">Logging not in progress.</string>
    <string name="social_bluetooth_summary_settings">Logging not in progress.</string>
    <string name="social_bluetooth_le_summary_settings">Logging not in progress.</string>
    <string name="permissions_summary_title">Manage Permissions</string>
    <string name="permissions_settings_title">Permissions</string>
    <string name="pref_login_button">pref_login_button</string>
    <string name="pref_log_sync">pref_log_sync</string>
    <string name="pref_sensors_accelerometer">pref_sensors_accelerometer</string>
    <string name="pref_sensors_termometer">pref_sensors_termometer</string>
    <string name="pref_sensors_gravity">pref_sensors_gravity</string>
    <string name="pref_sensors_gyroscope">pref_sensors_gyroscope</string>
    <string name="pref_sensors_linearacceleration">pref_sensors_linearacceleration</string>
    <string name="pref_sensors_rotationvector">pref_sensors_rotationvector</string>
    <string name="pref_sensors_magneticfield">pref_sensors_magneticfield</string>
    <string name="pref_sensors_orientation">pref_sensors_orientation</string>
    <string name="pref_sensors_proximity">pref_sensors_proximity</string>
    <string name="pref_sensors_light">pref_sensors_light</string>
    <string name="pref_sensors_pressure">pref_sensors_pressure</string>
    <string name="pref_sensors_humidity">pref_sensors_humidity</string>
    <string name="pref_sensors_gps">pref_sensors_gps</string>
    <string name="pref_sensors_network">pref_sensors_network</string>
    <string name="pref_sensors_networks">pref_sensors_networks</string>
    <string name="pref_sensors_ambience">pref_sensors_ambience</string>
    <string name="pref_sensors_audio">pref_sensors_audio</string>
    <string name="pref_sensors_calls_in">pref_sensors_calls_in</string>
    <string name="pref_sensors_calls_out">pref_sensors_calls_out</string>
    <string name="pref_sensors_sms_in">pref_sensors_sms_in</string>
    <string name="pref_sensors_sms_out">pref_sensors_sms_out</string>
    <string name="pref_sensors_app_usage">pref_sensors_app_usage</string>
    <string name="pref_sensors_screen_usage">pref_sensors_screen_usage</string>
    <string name="pref_sensors_bluetooth">pref_sensors_bluetooth</string>
    <string name="pref_sensors_bluetooth_le">pref_sensors_bluetooth_le</string>
    <string name="appversion">Application Version</string>
    <string name="shortcut_settings_short">Settings</string>
    <string name="shortcut_settings_long">Settings</string>
    <string name="shortcut_settings_disabled">Settings</string>
    <string name="shortcut_questions_short">Time Diary</string>
    <string name="shortcut_questions_long">Time Diary</string>
    <string name="shortcut_questions_disabled">Time Diary</string>
    <string name="battery_permission_title">Battery Optimization</string>
    <string name="location_permission_title">Access Location</string>
    <string name="audio_permission_title">Detect Audio</string>
    <string name="contacts_permission_title">Access Contacts</string>
    <string name="sms_permission_title">Detect Phone Sms</string>
    <string name="phone_permission_title">Detect Phone Calls</string>
    <string name="notifications_permission_title">Detect Notifications</string>
    <string name="applications_permission_title">Detect Running Application</string>
    <string name="touch_permission_title">Detect Touch Events</string>
    <string name="camera_permission_title">Take Pictures</string>
    <string name="wifi_permission_title">Automatic synchronization over Wi-Fi</string>
    <string name="resetapp">Reset application</string>
    <string name="resetappsummary">Reset all settings and experiments</string>
    <string name="challenges_ongoing_settings_title">Ongoing</string>
    <string name="challenges_available_settings_title">Available</string>
    <string name="challenges_completed_settings_title">Completed</string>
    <string name="challenges_expired_settings_title">Expired</string>
    <string name="challenges_ongoing_settings_summary" formatted="false">You have %s challenges to contribute to</string>
    <string name="challenges_available_settings_summary" formatted="false">There are %s challenges available</string>
    <string name="challenges_completed_settings_summary" formatted="false">You have %s completed challenges</string>
    <string name="challenges_expired_settings_summary" formatted="false">You have %s expired challenges</string>
    <string name="message_unread_settings_summary" formatted="false">You have %s unread messages</string>
    <string name="message_unread_settings_title">Unread</string>
    <string name="message_read_settings_summary" formatted="false">You have %s read messages</string>
    <string name="message_read_settings_title">Read</string>
    <string name="tasks_unsolved_settings_summary" formatted="false">You have %s unsolved tasks</string>
    <string name="tasks_unsolved_settings_title">Unsolved</string>
    <string name="tasks_solved_settings_summary" formatted="false">You have %s solved tasks</string>
    <string name="tasks_solved_settings_title">Solved</string>
    <string name="timediaries_settings_title">Time Diaries</string>
    <string name="timediaries_unsolved_settings_summary" formatted="false">You have %s unsolved time diaries</string>
    <string name="timediaries_unsolved_settings_title" formatted="false">Unsolved</string>
    <string name="timediaries_solved_settings_summary" formatted="false">You have %s solved time diaries</string>
    <string name="timediaries_solved_settings_title" formatted="false">Solved</string>
    <string name="timediaries_expired_settings_summary" formatted="false">You have %s expired time diaries</string>
    <string name="timediaries_expired_settings_title" formatted="false">Expired</string>
    <string name="tasks_expired_settings_summary" formatted="false">You have %s expired tasks</string>
    <string name="tasks_expired_settings_title" formatted="false">Expired</string>
    <string name="messages_expired_settings_summary" formatted="false">You have %s expired messages</string>
    <string name="messages_expired_settings_title" formatted="false">Expired</string>
</resources>