<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="pref_main_preferencescreen">
    
    <PreferenceCategory 
        android:title="@string/user_settings">
        
		<Preference
            android:key="@string/pref_login_button"
        	android:title="@string/login" />

	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/notification_sleep_settings"
		android:key="pref_category_notifications_sleep">
		<ListPreference
			android:key="pref_notifications_sleep"
			android:title="@string/notification_settings_title"
			android:summary="@string/notification_settings_subtitle"
			android:dialogTitle="@string/notification_settings_dialog"
			android:entries="@array/answers"
			android:entryValues="@array/answers"
			android:defaultValue="0" />
	</PreferenceCategory>
	<PreferenceCategory
		android:key="pref_category_data"
		android:title="@string/data_settings">
		<Preference
			android:key="@string/pref_log_sync"
			android:summary="@string/sync_logs_summary"
			android:title="@string/sync_logs" />
		<Preference
			android:key="pref_log_dump_archive"
			android:summary="@string/dump_archive_files_summary"
			android:title="@string/dump_archive_files" />
		<Preference
			android:key="pref_log_delete_archive"
			android:summary="@string/delete_archive_files_summary"
			android:title="@string/delete_archive_files" />
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/application_settings">

		<PreferenceScreen
			android:persistent="true"
			android:summary="@string/permissions_summary_title"
			android:key="permissions_main_preferencescreen"
			android:title="@string/permissions_settings_title" >

			<SwitchPreference
				android:defaultValue="false"
				android:key="battery_permission_key"
				android:title="@string/battery_permission_title" />
			<SwitchPreference
				android:defaultValue="false"
				android:key="location_permission_title"
				android:title="@string/location_permission_title" />
			<SwitchPreference
				android:defaultValue="false"
				android:key="audio_permission_title"
				android:title="@string/audio_permission_title" />
			<SwitchPreference
				android:defaultValue="false"
				android:key="contacts_permission_title"
				android:title="@string/contacts_permission_title" />
			<SwitchPreference
				android:defaultValue="false"
				android:key="sms_permission_key"
				android:title="@string/sms_permission_title" />
			<SwitchPreference
				android:defaultValue="false"
				android:key="phone_permission_title"
				android:title="@string/phone_permission_title" />
			<SwitchPreference
				android:defaultValue="false"
				android:key="notifications_permission_title"
				android:title="@string/notifications_permission_title" />
			<SwitchPreference
				android:defaultValue="false"
				android:key="applications_permission_title"
				android:title="@string/applications_permission_title" />
			<SwitchPreference
				android:defaultValue="false"
				android:key="touch_permission_title"
				android:title="@string/touch_permission_title" />
			<SwitchPreference
				android:defaultValue="false"
				android:key="camera_permission_title"
				android:title="@string/camera_permission_title" />
			<SwitchPreference
				android:defaultValue="false"
				android:key="wifi_permission_title"
				android:title="@string/wifi_permission_title" />
		</PreferenceScreen>

		<Preference
			android:key="pref_log_reset_app"
			android:title="@string/resetapp"
			android:summary="@string/resetappsummary" />
		<Preference
			android:key="pref_log_app_version"
			android:title="@string/appversion" />
	</PreferenceCategory>

    
</PreferenceScreen>