<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:shortcutShortLabel="@string/shortcut_settings_short"
        android:shortcutLongLabel="@string/shortcut_settings_long"
        android:shortcutDisabledMessage="@string/shortcut_settings_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="it.unitn.disi.witmee.sensorlog"
            android:targetClass="it.unitn.disi.witmee.sensorlog.activities.SettingActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="questions"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:shortcutShortLabel="@string/shortcut_questions_short"
        android:shortcutLongLabel="@string/shortcut_questions_long"
        android:shortcutDisabledMessage="@string/shortcut_questions_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="it.unitn.disi.witmee.sensorlog"
            android:targetClass="it.unitn.disi.witmee.sensorlog.activities.QuestionActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>